[tool.poetry]
name = "terra-classic-sdk"
authors = ["Geoff Munn <geoff@zimoobo.com>"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
description = "The Python SDK for Terra Classic"
documentation = "https://terra-money.github.io/terra.py/index.html"
homepage = "https://github.com/geoffmunn/terra.py"
keywords = ["blockchain", "terra", "terra classic", "lunc", "crypto", "luna classic", "luna classic sdk", "lunc sdk", "osmosis", "crypto sdk", "blockchain sdk"]
license = "MIT"
packages = [{ include = "terra_classic_sdk" }]
readme = "README.md"
repository = "https://github.com/terra-money/terra.py"
version = "3.0.0b2"

[tool.poetry.dependencies]
aiohttp = "^3.9.1"
bech32 = "^1.2.0"
bip32utils = "^0.3.post4"
ecdsa = "^0.18.0"
mnemonic = "^0.20"
python = "^3.10"
protobuf = "^4.25.1"
betterproto = "2.0.0b4"
furl = "^2.1.3"
boltons = "^23.1.1"
terra-classic-proto = "^3.1.2"
nest-asyncio = "^1.5.8"
attrs = "^23.1.0"
wrapt = "^1.16.0"

[tool.poetry.dev-dependencies]
aioresponses = "^0.7.6"
asynctest = "^0.13.0"
pytest-cov = "^4.1.0"
pytest = "^7.4.3"
pip = "^23.3.1"
Sphinx = "^7.2.6"
sphinx-autobuild = "^2021.3.14"
black = "^23.11.0"
coverage = "^7.3.2"
isort = "^5.12.0"
mypy = "^1.7.1"
pytest-mock = "^3.12.0"
pytest-runner = "^6.0.0"
pytest-sugar = "^0.9.7"
sphinx-autodoc-typehints = "^1.25.2"
uvloop = "^0.19.0"
watchdog = "^3.0.0"
wheel = "^0.42.0"
flake8 = "^6.1.0"
sphinx-rtd-theme = "^2.0.0"
types-python-dateutil = "^2.8.19.14"

[tool.pytest.ini_options]
addopts = "-ra -q"
minversion = "6.0"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.8.1"]
